--- a/src/main/resources/templates/jeux/fiche.html
+++ b/src/main/resources/templates/jeux/fiche.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<script type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
+    <script type="text/javascript"></script>
+    <!-- STYLE -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- SCRIPT -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
 </head>
-<body>
+
+<body class="container">
+
+    <h1 class="alert alert-primary text-center">Fiche de Jeux</h1>
+
+    <!-- Afficher les infos du joueur -->
+    <ul class="list-group">
+        <li class="list-group-item d-flex">
+            <div class="col">Identifiant</div>
+            <div class="col">
+                <span th:text="${jeu.id}"></span>
+            </div>
+        </li>
+        <li class="list-group-item d-flex">
+            <div class="col">Titre</div>
+            <div class="col">
+                <span th:text="${jeu.title}"></span>
+            </div>
+        </li>
+        <li class="list-group-item d-flex">
+            <div class="col">Nombre de joueur min</div>
+            <div class="col">
+                <span th:text="${jeu.min}"></span>
+            </div>
+        </li>
+        <li class="list-group-item d-flex">
+            <div class="col">Nombre de joueur max</div>
+            <div class="col">
+                <span th:text="${jeu.max}"></span>
+            </div>
+        </li>
+        <li class="list-group-item d-flex">
+            <div class="col">Parties</div>
+            <div class="col" th:each="contest: ${jeu.contests}">
+                <div th:text="${contest}"></div>
+            </div>
+        </li>
+    </ul>
 
 </body>
+
 </html>
