--- a/src/main/resources/templates/jeux/form.html
+++ b/src/main/resources/templates/jeux/form.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<script type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
+    <script type="text/javascript"></script>
+    <!-- STYLE -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- SCRIPT -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
 </head>
-<body>
+
+<body class="container">
+    <h1 class="alert alert-primary text-center">Formulaire</h1>
+
+    <form method="post" th:action="@{/jeu/ajouter}" th:object="${jeu}">
+        <div class="form-group">
+            <label for="nickname">Titre</label>
+            <input type="text" th:field="*{title}" id="title" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="min">Nombre de joueurs minimum</label>
+            <input type="text" th:field="*{min}" id="min" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="max">Nombre de joueurs maximum</label>
+            <input type="text" th:field="*{max}" id="max" class="form-control">
+        </div>
+
+        <div class="d-flex mt-3 justify-content-between">
+            <button type="submit" class="btn btn-primary">
+                <i class="fa fa-save"></i> Créer
+            </button>
+            <button type="reset" class="btn btn-warning">
+                <i class="fa fa-eraser"></i> Effacer
+            </button>
+            <a th:href="@{/jeux}" class="btn btn-danger">
+                <i class="fa fa-reply"></i> Retour
+            </a>
+        </div>
+    </form>
 
 </body>
+
 </html>
