--- a/src/main/resources/templates/jeux/games.html
+++ b/src/main/resources/templates/jeux/games.html
@@ -1,55 +1,32 @@
-<!DOCTYPE html>
-<html>
+<th:block th:include="_commun/header.html"></th:block>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Insert title here</title>
-    <script type="text/javascript"></script>
-    <!-- STYLE -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- SCRIPT -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+<h1 class="alert alert-primary text-center">Nos jeux</h1>
 
-</head>
-
-<body class="container">
-
-    <h1 class="alert alert-primary text-center">Nos jeux</h1>
-
-    <h2>Liste des Jeux</h2>
-    <table class="table table-bordered table-striped">
-        <thead class="table-dark">
-            <tr>
-                <th><i class="fa fa-cogs"></i></th>
-                <th>ID</th>
-                <th>Nom</th>
-                <th>Joueurs Minimum</th>
-                <th>Joueurs Maximum</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:if="${jeux.empty}">
-                <td colspan="3">Aucun Jeux en base de données</td>
-            </tr>
-            <tr th:each="jeu: ${jeux}">
-                <td>
-                    <a th:href="@{/jeu/{id}/fiche(id=${jeu.id})}"><i class="fa fa-file"></i></a>
-                    <a th:href="@{/jeu/{id}/supprimer(id=${jeu.id})}"><i class="fa fa-trash text-danger"></i></a>
-                </td>
-                <td><span th:text="${jeu.id}"> Identifiant </span></td>
-                <td><span th:text="${jeu.title}"> Titre </span></td>
-                <td><span th:text="${jeu.min}">Nombre min</span></td>
-                <td><span th:text="${jeu.max}">Nombre max</span></td>
-            </tr>
-        </tbody>
-    </table> 
-
-</body>
-
-</html>
+<h2>Liste des Jeux</h2>
+<table class="table table-bordered table-striped">
+    <thead class="table-dark">
+        <tr>
+            <th><i class="fa fa-cogs"></i></th>
+            <th>ID</th>
+            <th>Nom</th>
+            <th>Joueurs Minimum</th>
+            <th>Joueurs Maximum</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr th:if="${jeux.empty}">
+            <td colspan="3">Aucun Jeux en base de données</td>
+        </tr>
+        <tr th:each="jeu: ${jeux}">
+            <td>
+                <a th:href="@{/jeu/{id}/fiche(id=${jeu.id})}"><i class="fa fa-file"></i></a>
+                <a th:href="@{/jeu/{id}/supprimer(id=${jeu.id})}"><i class="fa fa-trash text-danger"></i></a>
+            </td>
+            <td><span th:text="${jeu.id}"> Identifiant </span></td>
+            <td><span th:text="${jeu.title}"> Titre </span></td>
+            <td><span th:text="${jeu.min}">Nombre min</span></td>
+            <td><span th:text="${jeu.max}">Nombre max</span></td>
+        </tr>
+    </tbody>
+</table>
+<th:block th:include="_commun/footer.html"></th:block>
