--- a/src/main/resources/templates/_commun/header.html
+++ b/src/main/resources/templates/_commun/header.html
@@ -44,8 +44,8 @@
                         <a class="nav-link" href="/parties">Parties</a>
                     </li>
                 </ul>
-                <form action="/recherche/joueur" method="get" class="d-flex">
-                    <input type="text" name="word" id="" class="form-control me-2">
+                <form action="/recherche/jeu" method="get" class="d-flex">
+                    <input type="text" name="search" id="" class="form-control me-2">
                     <button class="btn btn-outline-success"><i class="fa fa-search"></i></button>
                 </form>
             </div>
